--- a/about.html
+++ b/about.html
@@ -1,65 +1,117 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>About — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body data-page="about">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="README.md" target="_blank">README (Tech)</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+        <a class="btn btn-outline-light btn-sm" href="README.html">README (Tech)</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="panel grid" style="grid-template-columns:1fr 1fr 1fr;">
-      <div class="panel">
-        <div class="card-title">Mohamed Faisal Sindhi</div>
-        <div class="muted">Frontend, deployment, chatbot</div>
-      </div>
-      <div class="panel">
-        <div class="card-title">Hongxu Yang</div>
-        <div class="muted">UI/UX, ERD & documentation</div>
-      </div>
-      <div class="panel">
-        <div class="card-title">Jonathan James</div>
-        <div class="muted">Controllers, charts, data service</div>
-      </div>
-      <div style="grid-column:1/-1; display:flex; gap:10px;">
-        <a class="btn ghost" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank">GitHub Repository</a>
-        <a class="btn ghost" href="README.md" target="_blank">README (Technical Details)</a>
-      </div>
-    </section>
+  <main class="container container-narrow py-4">
+    <div class="card p-4">
+      <h5 class="mb-3">About Us</h5>
+      <div class="row g-3">
+        <div class="col-md-4">
+          <div class="card p-3 team-card h-100">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/team_faisal.jpg" alt="Mohamed Faisal Sindhi">
+              <div>
+                <div class="fw-semibold">Mohamed Faisal Sindhi</div>
+                <div class="text-muted-2 small">Frontend, deployment, chatbot</div>
+              </div>
+            </div>
+            <div class="mt-3 d-flex gap-2">
+              <a class="btn btn-outline-light btn-sm" href="https://github.com/">GitHub Repository</a>
+              <a class="btn btn-outline-light btn-sm" href="README.html">README (Technical Details)</a>
+            </div>
+          </div>
+        </div>
 
-    <section class="panel" style="margin-top:18px;">
-      <div class="card-title">Data Model (ERD)</div>
-      <img class="erd" src="assets/logical_data_model_v3.png" alt="ERD"/>
-    </section>
+        <div class="col-md-4">
+          <div class="card p-3 team-card h-100">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/team_hongxu.jpg" alt="Hongxu Yang">
+              <div>
+                <div class="fw-semibold">Hongxu Yang</div>
+                <div class="text-muted-2 small">UI/UX, ERD & documentation</div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    <section class="panel" style="margin-top:18px;">
-      <div class="card-title">API Endpoints Used (Read-Only)</div>
-      <ul>
-        <li>World Bank GDP: <span class="muted">https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json</span></li>
-        <li>World Bank Population: <span class="muted">https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json</span></li>
+        <div class="col-md-4">
+          <div class="card p-3 team-card h-100">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/team_jonathan.jpg" alt="Jonathan James">
+              <div>
+                <div class="fw-semibold">Jonathan James</div>
+                <div class="text-muted-2 small">Controllers, charts, data service</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> <!-- row -->
+    </div>
+
+    <div class="card p-4 mt-4">
+      <h5>Data Model (ERD)</h5>
+      <div class="erd-wrap mt-3">
+        <img src="assets/logical_data_model_v3.png" alt="ERD diagram">
+      </div>
+    </div>
+
+    <div class="card p-4 mt-4">
+      <h5>Overview of CRUD Implementation</h5>
+      <p class="text-muted-2">
+        The application follows a simple MVC structure on the client. The <strong>Model</strong> is a
+        singleton backed by <code>localStorage</code> with a versioned key. On first run, a seed
+        of 12 representative states is written to storage. The <strong>Controller</strong> exposes
+        page-level functions for rendering KPI cards, tables, forms, and charts; it also performs
+        input parsing/validation and delegates persistence to the Model. The <strong>Views</strong> are
+        HTML pages styled with a shared stylesheet. Create, Update, and Delete write through the
+        Model and redirect back to the table; the Charts and Home KPIs compute aggregates live from
+        the same source of truth, so updates are immediately reflected without reloading any data file.
+      </p>
+    </div>
+
+    <div class="card p-4 mt-4">
+      <h5>Notable Technical Challenges & Solutions</h5>
+      <ul class="text-muted-2">
+        <li><strong>Empty homepage and charts:</strong> Introduced a schema-versioned seed and aggregate helpers so the UI always has coherent totals and top-N series.</li>
+        <li><strong>External API instability:</strong> Wrapped World Bank requests with a compact fetcher that falls back to cached values and marks the source explicitly.</li>
+        <li><strong>Layout overflow:</strong> Clamped KPI typography and made tables fully responsive with right-aligned numeric columns for readability.</li>
+        <li><strong>Consistency across pages:</strong> Centralized the navbar and repeated Botpress embed so navigation and the chat entry point behave uniformly.</li>
       </ul>
-      <div class="muted">Fetched dynamically for external insights; no data persistence.</div>
-    </section>
-
-    <div class="footer">© 2025 US States Dashboard</div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
