--- a/create.html
+++ b/create.html
@@ -1,79 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Create • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>Create — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body data-page="create">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="read.html">Back to Table</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="panel">
-      <div class="card-title">Add a New State</div>
-      <form id="createForm" class="form">
-        <div class="row">
-          <div>
-            <label class="label">ID (USPS)</label>
-            <input class="input" name="id" maxlength="2" placeholder="e.g., CA" required/>
-          </div>
-          <div>
-            <label class="label">Name</label>
-            <input class="input" name="name" required/>
-          </div>
-          <div>
-            <label class="label">Region</label>
-            <select name="region" class="input" required>
-              <option value="" disabled selected>Select Region</option>
-              <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
-            </select>
-          </div>
-          <div>
-            <label class="label">Capital</label>
-            <input class="input" name="capital" required/>
-          </div>
-          <div>
-            <label class="label">Population</label>
-            <input class="input" name="population" type="number" min="0" step="1" required/>
-          </div>
-          <div>
-            <label class="label">GDP (USD)</label>
-            <input class="input" name="gdp" type="number" min="0" step="1" required/>
-          </div>
-          <div>
-            <label class="label">Area (km²)</label>
-            <input class="input" name="area" type="number" min="0" step="1" required/>
-          </div>
-          <div>
-            <label class="label"># Cities</label>
-            <input class="input" name="cities" type="number" min="0" step="1" required/>
-          </div>
+  <main class="container container-narrow py-4">
+    <div class="card p-4">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h5 class="mb-0">Add a New State</h5>
+        <a class="btn btn-outline-light btn-sm" href="read.html">Back to Table</a>
+      </div>
+
+      <form id="create-form" class="row g-3">
+        <div class="col-md-3">
+          <label class="form-label">ID (USPS)</label>
+          <input name="id" class="form-control" maxlength="2" placeholder="CA" required>
         </div>
-        <div style="display:flex;gap:10px;margin-top:6px;">
-          <button class="btn" type="submit">Create</button>
-          <a class="btn ghost" href="read.html">Cancel</a>
+        <div class="col-md-5">
+          <label class="form-label">Name</label>
+          <input name="name" class="form-control" placeholder="California" required>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Region</label>
+          <select name="region" class="form-select" required>
+            <option value="">Select Region</option>
+            <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
+          </select>
+        </div>
+
+        <div class="col-md-6">
+          <label class="form-label">Capital</label>
+          <input name="capital" class="form-control" placeholder="Sacramento" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Population (people)</label>
+          <input name="population" type="number" min="0" class="form-control" placeholder="39500000" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">GDP (USD)</label>
+          <input name="gdp" type="number" min="0" class="form-control" placeholder="3100000000000" required>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label">Area (km²)</label>
+          <input name="area" type="number" min="0" class="form-control" placeholder="423967" required>
+        </div>
+        <div class="col-md-3">
+          <label class="form-label"># Cities</label>
+          <input name="cities" type="number" min="0" class="form-control" placeholder="482" required>
+        </div>
+
+        <div class="col-12 d-flex gap-2">
+          <button class="btn btn-primary">Create</button>
+          <a class="btn btn-outline-light" href="read.html">Cancel</a>
         </div>
       </form>
-      <div class="muted" style="text-align:right;margin-top:8px;">Create (CRUD C)</div>
-    </section>
-    <div class="footer">© 2025 US States Dashboard</div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+  <script type="module">
+    import { bindCreate } from "./assets/controller.js";
+    bindCreate();
+  </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
