--- a/data.html
+++ b/data.html
@@ -1,55 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Charts • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>Charts — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
-<body data-page="charts">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="index.html">Home</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="grid">
-      <div class="panel">
-        <div class="card-title">Population Share (Top 6)</div>
-        <div class="chart-wrap"><canvas id="popChart"></canvas></div>
-      </div>
-      <div class="panel">
-        <div class="card-title">GDP by State (Top 8)</div>
-        <div class="chart-wrap"><canvas id="gdpChart"></canvas></div>
-      </div>
-      <div class="panel">
-        <div class="card-title">Land Area (Top 10)</div>
-        <div class="chart-wrap"><canvas id="areaChart"></canvas></div>
-      </div>
-    </section>
+  <main class="container container-narrow py-4">
+    <div class="row g-4">
+      <div class="col-lg-4"><div class="card p-3"><h6>Population Share (Top 6)</h6><canvas id="popDonut" height="240"></canvas></div></div>
+      <div class="col-lg-4"><div class="card p-3"><h6>GDP by State (Top 8)</h6><canvas id="gdpBar" height="240"></canvas></div></div>
+      <div class="col-lg-4"><div class="card p-3"><h6>Land Area (Top 10)</h6><canvas id="areaLine" height="240"></canvas></div></div>
+    </div>
 
-    <section class="panel" style="margin-top:20px;">
-      <div class="card-title">External Insights</div>
-      <div id="insGdp" class="kpi-value" style="font-size:clamp(1.2rem,3.5vw,2rem);"></div>
-      <div id="insPop" class="kpi-value" style="font-size:clamp(1.2rem,3.5vw,2rem);margin-top:8px;"></div>
-      <button id="btnInsightsRefresh" class="btn btn-xs ghost" style="margin-top:12px;">Refresh</button>
-    </section>
-
-    <div class="footer">© 2025 US States Dashboard</div>
+    <div class="card p-4 mt-4">
+      <h5>External Insights</h5>
+      <div class="row g-3">
+        <div class="col-md-6"><div class="p-3 rounded" style="background:#0f1b24;border:1px solid #223544">
+          <div class="text-muted-2">USA GDP (current US$)</div>
+          <div id="ext-gdp" class="fs-4 fw-bold mt-1">—</div>
+          <div class="text-muted-2 small">Source: <span class="ext-source">World Bank Open Data</span></div>
+        </div></div>
+        <div class="col-md-6"><div class="p-3 rounded" style="background:#0f1b24;border:1px solid #223544">
+          <div class="text-muted-2">USA Population</div>
+          <div id="ext-pop" class="fs-4 fw-bold mt-1">—</div>
+          <div class="text-muted-2 small">Source: <span class="ext-source">World Bank Open Data</span></div>
+        </div></div>
+      </div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+  <script type="module">
+    import { renderExternal } from "./assets/controller.js";
+    import { renderCharts } from "./assets/charts.js";
+    renderCharts();
+    renderExternal();
+  </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
+
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
