--- a/delete.html
+++ b/delete.html
@@ -1,58 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Delete • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>Delete — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body data-page="delete">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="read.html">Back</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="panel">
-      <div class="card-title">Delete a State</div>
-      <p class="muted">This action cannot be undone.</p>
+  <main class="container container-narrow py-4">
+    <div class="card p-4">
+      <h5>Delete a State</h5>
+      <p class="text-warning">This action cannot be undone.</p>
 
-      <form id="deleteForm" class="form">
-        <div class="row">
-          <div>
-            <label class="label">Choose by ID</label>
-            <select id="delChooser" class="input"></select>
-          </div>
-          <div>
-            <label class="label">Or enter ID manually</label>
-            <input id="delManual" class="input" placeholder="e.g., CA" maxlength="2"/>
-          </div>
+      <div class="row g-3 mb-3">
+        <div class="col-md-6">
+          <label class="form-label">Choose by ID</label>
+          <select id="delete-select" class="form-select"></select>
         </div>
-        <div class="panel muted" style="margin-top:8px;">You are about to delete: Select a record below.</div>
-
-        <div style="display:flex;gap:10px;margin-top:10px;">
-          <button class="btn danger" type="submit">Delete</button>
-          <a class="btn ghost" href="read.html">Cancel</a>
+        <div class="col-md-6">
+          <label class="form-label">Or enter ID manually</label>
+          <input id="delete-id" class="form-control" placeholder="e.g., CA" maxlength="2">
         </div>
-      </form>
+      </div>
 
-      <div class="muted" style="text-align:right;margin-top:8px;">Delete (CRUD D)</div>
-    </section>
+      <div class="alert alert-secondary small">
+        You are about to delete: <strong id="delete-confirm">Select a record below.</strong>
+      </div>
 
-    <div class="footer">© 2025 US States Dashboard</div>
+      <div class="d-flex gap-2">
+        <button id="btn-delete" class="btn btn-danger">Delete</button>
+        <a class="btn btn-outline-light" href="read.html">Cancel</a>
+      </div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+  <script type="module">
+    import { initDelete } from "./assets/controller.js";
+    initDelete();
+  </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
+
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
