--- a/read.html
+++ b/read.html
@@ -1,49 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Data Table • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>US States Dashboard — Data Table</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body data-page="read">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="index.html">Home</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="panel">
-      <div class="card-title" style="display:flex;justify-content:space-between;align-items:center;">
-        <span>States</span>
-        <a class="btn" href="create.html">+ Add State</a>
+  <main class="container container-narrow py-4">
+    <div class="card p-3">
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <h5 class="mb-0">States</h5>
+        <a class="btn btn-teal btn-sm btn-primary" href="create.html">+ Add State</a>
       </div>
-      <div class="panel" style="padding:0;">
-        <table class="table">
+      <div class="table-responsive">
+        <table class="table table-dark align-middle">
           <thead>
             <tr>
-              <th>ID</th><th>Name</th><th>Capital</th><th>Population</th><th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th>Actions</th>
+              <th>ID</th><th>Name</th><th>Capital</th>
+              <th class="text-end">Population</th>
+              <th class="text-end">GDP (USD)</th>
+              <th class="text-end">Area (km²)</th>
+              <th class="text-end">Cities</th>
+              <th class="text-end">Actions</th>
             </tr>
           </thead>
-          <tbody id="statesBody"></tbody>
+          <tbody id="states-body"></tbody>
         </table>
       </div>
-      <div class="muted" style="text-align:right;margin-top:8px;">Read view (CRUD R)</div>
-    </section>
-    <div class="footer">© 2025 US States Dashboard</div>
+      <div class="text-end text-muted-2">Read view (CRUD R)</div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+
+  <script type="module">
+    import { renderTable } from "./assets/controller.js";
+    renderTable();
+  </script>
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
