--- a/update.html
+++ b/update.html
@@ -1,86 +1,93 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Update • US States</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8"/>
+  <title>Update — US States Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
-<body data-page="update">
-  <nav>
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-      <a href="read.html">Data Table</a>
-      <a href="create.html">Create</a>
-      <a href="update.html">Update</a>
-      <a href="delete.html">Delete</a>
-      <a href="data.html">Charts</a>
-      <a href="about.html">About</a>
-      <a class="right btn ghost" href="read.html">Back to Table</a>
+<body>
+  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
+    <div class="container container-narrow">
+      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+      <div class="ms-auto">
+        <a class="me-3" href="read.html">Data Table</a>
+        <a class="me-3" href="create.html">Create</a>
+        <a class="me-3" href="update.html">Update</a>
+        <a class="me-3" href="delete.html">Delete</a>
+        <a class="me-3" href="data.html">Charts</a>
+        <a class="me-3" href="about.html">About</a>
+      </div>
     </div>
   </nav>
 
-  <main class="wrapper">
-    <section class="panel">
-      <div class="card-title">Choose a state to edit</div>
-      <div style="display:flex;gap:8px;">
-        <select id="stateChooser" class="input" style="max-width:360px;"></select>
-        <button id="btnLoad" class="btn ghost">Load</button>
+  <main class="container container-narrow py-4">
+    <div class="card p-4">
+      <h5>Choose a state to edit</h5>
+      <div class="d-flex gap-2 mb-3">
+        <select id="state-select" class="form-select w-auto"></select>
+        <button id="btn-load" class="btn btn-outline-light">Load</button>
       </div>
-    </section>
 
-    <section class="panel" style="margin-top:18px;">
-      <div class="card-title">Update State Information</div>
-      <form id="updateForm" class="form">
-        <div class="row">
-          <div>
-            <label class="label">State ID (2-Letter Code)</label>
-            <input id="u_id" class="input" readonly/>
-          </div>
-          <div>
-            <label class="label">State Name</label>
-            <input id="u_name" class="input" required/>
-          </div>
-          <div>
-            <label class="label">Region</label>
-            <select id="u_region" class="input" required>
-              <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
-            </select>
-          </div>
-          <div>
-            <label class="label">Capital</label>
-            <input id="u_capital" class="input" required/>
-          </div>
-          <div>
-            <label class="label">Number of Cities</label>
-            <input id="u_cities" type="number" class="input" min="0" required/>
-          </div>
-          <div>
-            <label class="label">Population</label>
-            <input id="u_population" type="number" class="input" min="0" required/>
-          </div>
-          <div>
-            <label class="label">GDP (USD)</label>
-            <input id="u_gdp" type="number" class="input" min="0" required/>
-          </div>
-          <div>
-            <label class="label">Land Area (km²)</label>
-            <input id="u_area" type="number" class="input" min="0" required/>
-          </div>
+      <form id="update-form" class="row g-3">
+        <div class="col-md-3">
+          <label class="form-label">State ID (2-letter Code)</label>
+          <input name="id" class="form-control" maxlength="2" required>
         </div>
-        <div style="display:flex;gap:10px;margin-top:6px;">
-          <button class="btn" type="submit">Save Changes</button>
-          <a class="btn ghost" href="read.html">Cancel</a>
+        <div class="col-md-5">
+          <label class="form-label">State Name</label>
+          <input name="name" class="form-control" required>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Region</label>
+          <select name="region" class="form-select" required>
+            <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Capital</label>
+          <input name="capital" class="form-control" required>
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Number of Cities</label>
+          <input name="cities" type="number" min="0" class="form-control" required>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Population</label>
+          <input name="population" type="number" min="0" class="form-control" required>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">GDP (USD)</label>
+          <input name="gdp" type="number" min="0" class="form-control" required>
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Land Area (km²)</label>
+          <input name="area" type="number" min="0" class="form-control" required>
+        </div>
+        <div class="col-12 d-flex gap-2">
+          <button class="btn btn-primary">Save Changes</button>
+          <a class="btn btn-outline-light" href="read.html">Cancel</a>
         </div>
       </form>
-    </section>
-
-    <div class="footer">© 2025 US States Dashboard</div>
+    </div>
   </main>
 
-  <script type="module" src="assets/controller.js"></script>
+  <script type="module">
+    import { initUpdate } from "./assets/controller.js";
+    initUpdate();
+  </script>
 
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
+<footer class="container container-narrow py-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+    <span>© 2025 US States Dashboard</span>
+    <span class="text-muted-2">
+      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
+    </span>
+  </div>
+</footer>
+
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
 </html>
